<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_shopping_list">

    <fragment
        android:id="@+id/navigation_shopping_list"
        android:name="com.example.kulmkapp.ui.shoppingList.ShoppingListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_shopping_list" />

    <fragment
        android:id="@+id/navigation_fridge"
        android:name="com.example.kulmkapp.ui.fridge.FridgeFragment"
        android:label="@string/fridge_string"
        tools:layout="@layout/fragment_fridge" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.kulmkapp.ui.recipes.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" />
</navigation>